started with peer to peer profits from trading coins on our decentralized exchange.

v1.0.0.7 (Pre-release)
--------
 * Cleaned Core and QT source files
 * OpenSSL 1.1 Support
 * FIX: Excessive CPU use during mining
 * Upgrade: Debug to Logfile (Disabled by default, Added Categories and Function Names)
 * FIX: Removed peer banning ProcessBlock, upgraded some Misbehaving calls in main.cpp

v1.0.0.6
--------
* Updated Checkpoints
* Updated Fixed Seednodes with active masternodes list
* Bitcoin Firewall 1.2.2.4
* Masternode manager GUI - Cleanup
* Stake Halving Bug Fixed
* Testnet Established
* Dark Theme Installed
* Darksend Amounts lowered
* About -> Information -> Open PHC.conf button
* About -> Information -> Open Masternode.conf button
* Masternodes -> My Masternodes -> Open Masternode.conf button

v1.0.0.5
--------
* Updated Checkpoints
* Improved Bitcoin Firewall 1.2.2.3
* Fixed GUI Masternode manager (Downloading List...)
* Fixed Large bandwidth usage from certain peers
* Fixed issue with Dynamic Block Reward 3.0

v1.0.0.4
--------
* Updated Checkpoints
* Reformatted Bitcoin Firewall 1.2.2.2 source code
* RPC & phc.conf support added to Bitcoin Firewall
* Fixed masternode status bug when started remotely
* Fixed GUI Start masternode without updating

v1.0.0.3
--------
* Updated Seednodes from current Masternodes
* Updated Checkpoints
* Fixed Core 8 Cnode::nSyncHeight
* Added Firewall logging to debug.log

v1.0.0.2
--------
* Updated Checkpoints
* Improved ForkFix from 1.0.0.1 (net.cpp)

v1.0.0.1
--------
* Bitcoin Firewall 1.2.2
* Fixed chain-forking in Bitcoin Core (net.cpp)

v1.0.0.0
--------
* Dynamic Block Reward 3.0 integration
* First stable release on new codebase



--------------------
Profit Hunters Coin (PHC) is a free open source decentralized experimental project derived
from Bitcoin, with the goal of providing a long-term energy-efficient scrypt-based